--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background: #004494; /* Darker shade on hover */
+    background: #004494;
     border-radius: 5px;
 }
 
